--- a/package.json
+++ b/package.json
@@ -2,12 +2,16 @@
   "name": "Create-my-Portafolio",
   "version": "1.0.0",
   "description": "",
-  "source": "./src/index.html",
+  "source": "src/index.html",
+  "staticFiles": {
+    "staticPath": "src/assets",
+    "watcherGlob": "**"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "parcel serve ",
-    "build": "parcel build ",
-    "deploy":"gh-pages -d dist"
+    "build": "parcel build --public-url ./",
+    "deploy": "gh-pages -d dist"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +26,7 @@
   },
   "devDependencies": {
     "@parcel/transformer-image": "^2.0.0-rc.0",
-    "parcel": "^2.0.0-rc.0"
+    "parcel": "^2.0.0-rc.0",
+    "parcel-plugin-static-files-copy": "^2.6.0"
   }
 }
